--- a/FRONTEND/src/App.css
+++ b/FRONTEND/src/App.css
@@ -612,6 +612,7 @@ nav svg {
   padding: 20px;
 }
 .team .container {
+  margin-top: 100px;
   max-width: 1500px;
   min-width: 1500px;
   display: flex;
